Demo app: fix "md-menu" text color in dark mode.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,3 +62,7 @@ tui-doc-code pre code {
 .tui-space_top-3 {
     margin-top: 0.75rem;
 }
+
+.mat-mdc-menu-panel.tour-step {
+    color: #1b1f3b;
+}
